add flipping of sprite on directional input

--- a/index.html
+++ b/index.html
@@ -71,28 +71,27 @@
 
   let app = new PIXI.Application({width: 800, height: 600});
   document.body.appendChild(app.view);
-  let ground = new PIXI.Graphics();
-  ground.beginFill(0xFFFF00);
-  ground.lineStyle(5, 0xFF0000);
-  ground.drawRect(0, 550, 800, 50);
-  ground.drawRect(0, 350, 400, 50);
-  ground.drawRect(400, 150, 400, 50);
-  app.stage.addChild(ground);
+  let texture = PIXI.Texture.from('map.png');
+  let terrain = new PIXI.Sprite(texture);
+  app.stage.addChild(terrain);
 
-  let texture = PIXI.Texture.from('turtwig.png');
+  texture = PIXI.Texture.from('turtwig.png');
   let lastRendered = 0;
   const sprites = {};
 
   function render(world) {
-    for (let [id, {x, y}] of Object.entries(world)) {
+    for (let [id, {direction, x, y}] of Object.entries(world)) {
       let sprite = sprites[id];
       if (!sprite) {
         sprite = new PIXI.Sprite(texture);
         app.stage.addChild(sprite);
         sprites[id] = sprite;
       }
-      sprite.x = x - sprite.width/2;
-      sprite.y = y - sprite.height;
+      sprite.anchor.x = 0.5;
+      sprite.anchor.y = 1;
+      sprite.x = x;
+      sprite.y = y;
+      sprite.scale.x = direction;
     }
     for (let [id, sprite] of Object.entries(sprites)) {
       if (!world.hasOwnProperty(id)) {
